--- a/config/config.env
+++ b/config/config.env
@@ -1,12 +1,12 @@
-NODE_ENV=
-PORT=
+NODE_ENV=production
+PORT=5000
 
-MONGO_URI=
+MONGO_URI=mongodb://localhost/sedam
 
-JWT_SECRET=
+JWT_SECRET=supersecretsedamsecret
 
-TO_EMAIL=
-EMAIL=
-PASSWORD=
+TO_EMAIL=kotov.smtp@gmail.com
+EMAIL=kotov.jpeg@gmail.com
+PASSWORD=gSoWg7sQdVr79KeH
 
-TOKEN=
+TOKEN=980802664:AAEuunZNoYzxo76rOvd8mzMuZMHnOYAoxmg
