--- a/package.json
+++ b/package.json
@@ -7,36 +7,28 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "gulp": "npm run style --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run gulp\"",
-    "prod": "concurrently \"npm run server\" \"npm run client\""
+    "build": "npm run build --prefix client",
+    "gulp": "npm run gulp --prefix client",
+    "prod": "concurrently \"npm run server\" \"npm run client\" \"npm run gulp --prefix client\""
   },
   "author": "Kotov",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
     "colors": "^1.4.0",
-    "config": "^3.2.5",
+    "config": "^3.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
-    "express-rate-limit": "^5.0.0",
+    "express-rate-limit": "^5.1.1",
     "express-validator": "^6.4.0",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-watch": "^5.0.1",
-    "helmet": "^3.21.2",
+    "helmet": "^3.21.3",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.11",
+    "mongoose": "^5.9.3",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.2",
-    "react-helmet": "^5.2.1",
-    "react-router-dom": "^5.1.2",
-    "react-router-scroll-top": "^0.2.1",
-    "react-transition-group": "^4.3.0",
-    "request": "^2.88.0",
+    "nodemailer": "^6.4.4",
+    "request": "^2.88.2",
     "transliteration": "^2.1.8",
     "xss-clean": "^0.1.1"
   },
